--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@
 
 /*--- reset ---*/
 /*--- reset5 Â© 2011 opensource.736cs.com MIT ---*/
+
+@media screen and (max-width: 720px) {
+	/*CSS codes go here*/
+  }
+
 html,body,div,span,applet,object,iframe,
 h1,h2,h3,h4,h5,h6,p,blockquote,
 pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,
@@ -205,7 +210,7 @@ tt {
 .one-seventh{ width: 14.285%; }
 .one-fifth{ width: 20%; }
 .two-fifth{ width: 40%; }
-.three-fifth{ width: 60%; }
+.three-fifth{ width: 100%; }
 .four-fifth{ width: 80%; }
 
 .one{ width: 8.333% }
@@ -356,7 +361,7 @@ a{
 img.gdlr-full-boxed-background{ min-height: 100%; min-width: 1024px;
   width: 100%; height: auto; position: fixed; top: 0; left: 0; z-index: -1; }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 720px) {
   img.gdlr-full-boxed-background { left: 50%; margin-left: -512px; }
 }
 
@@ -421,7 +426,10 @@ img.gdlr-full-boxed-background{ min-height: 100%; min-width: 1024px;
 .gdlr-fixed-header.gdlr-header-inner{
 	-moz-box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.15);
 	-webkit-box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.15);
-	box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.15); }
+	 box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.15); 
+	
+	 cursor: pointer;
+	}
 .gdlr-fixed-header .gdlr-navigation-wrapper .gdlr-main-menu > li > a { font-size: 13px; padding-bottom: 23px; }
 .admin-bar .gdlr-fixed-header{ top: 32px }
 
